Fix navbar wrapping when width is between 800px and 900px

--- a/static/style.scss
+++ b/static/style.scss
@@ -480,7 +480,7 @@ Medium size
 Full size
 
 --------------------------------------*/
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 900px) {
     body {
         font-size: 16pt;
     }
